[package]
name = "wasm-sandpit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# console logging in browser
# web-sys = "0.3.61"  
wasm-bindgen = "0.2.84"

js-sys = "0.3.51"
web-sys = {version="0.3.61", features=['console',  'CanvasRenderingContext2d',  'Document',  'Element',  'HtmlCanvasElement',  'Window']}

# Serde support
serde = { version="1.0.152", features=['derive'] }
serde_json = "1.0.93"
serde-wasm-bindgen = "0.4.5"

# Random generator - not supported fully by wasm-pack -- see note
# rand = "0.8.5"

# Checking if we persist things between calls
lazy_static = "1.4.0"

# Example of declaring many features another way!
#[dependencies.web-sys]
#version = "0.3.61"
#features = [  'console',  'CanvasRenderingContext2d',  'Document',  'Element',  'HtmlCanvasElement',  'Window']
